# tfmx

./: .gitignore  NOTES.md  README.md  _scheduler.md  pyproject.toml
.githooks/: pre-commit  scan_secrets.py
debugs/: qwn_multimodal_probe.py
debugs/qsrs/: benchmark_long_audio.py  download_bili_audio.py  inspect_compose.py  probe_asr.py  profile_startup.py  soak_mixed.py
debugs/qwns/: inspect_compose.py
docs/qsrs/: HINTS.md  SETUP.md  USAGE.md
docs/qvls/: HINTS.md  SETUP.md  USAGE.md
docs/qwns/: HINTS.md  SETUP.md  USAGE.md
docs/teis/: HINTS.md  SETUP.md  TEI.md  USAGE.md  scheduler.md
runs/qsrs/: 01_deploy_default.sh  02_start_machine.sh  03_health_check.sh  04_benchmark.sh  05_test_scheduling.sh  06_soak_mixed.sh  98_sleep_backends.sh  99_cleanup.sh  README.md  _common.sh
runs/qvls/: 00_download_models.sh  01_deploy_mixed.sh  01_deploy_uniform.sh  02_start_machine.sh  03_health_check.sh  04_test_mixed.sh  05_test_scheduling.sh  99_cleanup.sh  README.md  run_bench4.sh  run_throughput.sh
runs/qwns/: 01_deploy_awq.sh  01_deploy_uniform.sh  02_start_machine.sh  03_health_check.sh  04_benchmark.sh  05_test_scheduling.sh  98_sleep_backends.sh  99_cleanup.sh  README.md
runs/recovery/: README.md  benchmark_tei_qsr_coexist.sh  restart_tei_qsr.sh  restart_tei_qwn.sh  start_tei_qsr.sh  stop_tei_qsr.sh
runs/systemd/: README.md  install_tei_qsr_user_services.sh  tfmx-qsr-machine.service.in  tfmx-tei-machine.service.in  uninstall_tei_qsr_user_services.sh
runs/teis/: 01_deploy_default.sh  02_start_machine.sh  03_health_check.sh  04_benchmark.sh  05_test_scheduling.sh  99_cleanup.sh  README.md  _common.sh
src/tfmx/: __init__.py  embed.py  embed_client.py  embed_server.py  gpu_ctl.py  gpu_fan.py  gpu_mon.py  lsh.py  ping_tei.sh  run_tei.sh  tei_benchmark.py  tei_client.py  tei_clients.py  tei_clients_cli.py  tei_clients_core.py  tei_clients_stats.py  tei_cluster.py  tei_compose.py  tei_machine.py  tei_scheduler.py  tei_server.py  vector_utils.py
src/tfmx/gpus/: __init__.py  fan.py  mon.py
src/tfmx/qsrs/: __init__.py  audio_profiles.py  benchmark.py  cli.py  client.py  clients.py  clients_core.py  clients_stats.py  compose.py  (+7 more)
tests/: proxy_test_values.py  test_scan_secrets.py  test_structure.py
tests/gpus/: test_ctl.py  test_mon.py  test_pow.py
tests/qsrs/: __init__.py  test_benchmark.py  test_cli.py  test_client.py  test_compose.py  test_long_audio.py  test_machine.py  test_machine_autostart.py
tests/qvls/: test_benchimgs.py  test_benchmark.py  test_client.py  test_clients.py  test_clients_core.py  test_clients_stats.py  test_compose.py  test_integration.py  test_machine.py  test_perf_tracker.py  test_performance.py  test_router.py  test_scheduler.py
tests/qwns/: __init__.py  test_adaptive_routing.py  test_benchmark.py  test_cli.py  test_client.py  test_clients_core.py  test_compose.py  test_integration.py  test_machine.py  test_machine_autostart.py  test_networking.py
tests/teis/: test_benchtext.py  test_cli.py  test_compose.py  test_machine.py  test_perf_tracker.py  test_performance.py  test_scheduler.py
tests/utils/: test_lsh.py  test_service_bootstrap.py  test_vectors.py
(+45 files in other folders)
