[build-system]
requires = ["setuptools>=62"]
build-backend = "setuptools.build_meta"

[project]
name = "tfmx"
version = "0.4.3"
authors = [
    { name="Hansimov" },
]
description = "Serve Transformers in one line"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [ "tclogger", "numpy", "requests" ]

[project.urls]
Homepage = "https://github.com/Hansimov/tfmx"
Issues = "https://github.com/Hansimov/tfmx/issues"

[project.scripts]
tei_server = "tfmx.tei_server:main"
tei_compose = "tfmx.tei_compose:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"tfmx" = [
    "config_qwen3_embedding_06b.json",
    "config_sentence_transformers.json",
]
