[build-system]
requires = ["setuptools>=62"]
build-backend = "setuptools.build_meta"

[project]
name = "tfmx"
version = "0.5.2"
authors = [
    { name="Hansimov" },
]
description = "Serve Transformers in one line"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [ "tclogger", "numpy", "requests" ]

[project.urls]
Homepage = "https://github.com/Hansimov/tfmx"
Issues = "https://github.com/Hansimov/tfmx/issues"

[project.scripts]
tei_compose = "tfmx.tei_compose:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"tfmx" = [
    "config_qwen3_embedding_06b.json",
    "config_sentence_transformers.json",
]
