[build-system]
requires = ["setuptools>=62"]
build-backend = "setuptools.build_meta"

[project]
name = "tfmx"
version = "1.1.3"
authors = [
    { name="Hansimov" },
]
description = "Serve Transformers and Manage GPUs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [ "tclogger", "numpy", "requests", "fastapi", "uvicorn", "httpx", "webu", "orjson", "python-multipart" ]

[project.urls]
Homepage = "https://github.com/Hansimov/tfmx"
Issues = "https://github.com/Hansimov/tfmx/issues"

[project.scripts]
gpu_fan = "tfmx.gpus.fan:main"
gpu_mon = "tfmx.gpus.mon:main"
gpu_pow = "tfmx.gpus.pow:main"
tei = "tfmx.teis.cli:main"
qvl_compose = "tfmx.qvls.compose:main"
qvl_machine = "tfmx.qvls.machine:main"
qvl_client = "tfmx.qvls.client:main"
qvl_clients = "tfmx.qvls.clients_cli:run_cli_main"
qvl_clients_stats = "tfmx.qvls.clients_stats:run_cli_main"
qvl_benchmark = "tfmx.qvls.benchmark:main"
qwn = "tfmx.qwns.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"tfmx.teis" = [
    "config_qwen3_embedding_06b.json",
    "config_sentence_transformers.json",
]
